fix wrapping div

--- a/p2.stefaniestgermain.com/css/interactive_ma.css
+++ b/p2.stefaniestgermain.com/css/interactive_ma.css
@@ -47,16 +47,18 @@ h3{
 }
 
 #right-half {
-    width:1024px;
-    margin: auto;
+    margin-left:0;
     padding-top: 85px;
     padding-left:20px;
-    
-    
+    overflow:hidden;
+    height: 1050px;
+ 
+       
 }
 
 .span10 {
     padding-top:100px;
+
 }
 
 #page-setup{
